package CrypticCreatures.api;

import CrypticCreatures.persistence.Database;

import java.io.BufferedWriter;
import java.io.IOException;

public class CardController {
    public static void handleRequest(String method, String path, String body, BufferedWriter out, Database database) throws IOException{

    }
}
