package CrypticCreatures.core.service;

import CrypticCreatures.core.models.cards.Package;

import java.util.List;

//buy Packages, sell Cards, trade Cards
public class Shop {

    public static Package generatePackage () {

        return new Package();
    }
}
