package CrypticCreatures.httpServer.http;

public enum ContentType {
    APPLICATION_JSON,
    TEXT_PLAIN,
    TEXT_HTML
}
