package CrypticCreatures.httpServer.http;

public enum HttpMethod {
    GET,
    POST,
    PUT,
    DELETE
}
