package CrypticCreatures.httpServer.http;

public class Request {
}
