package CrypticCreatures.httpServer.http;

public class Response {
}
