package CrypticCreatures.models.cards;

public enum ElementType {
    FIRE,
    WATER,
    ENERGY,
    EARTH,
    AIR
}
