package CrypticCreatures.models.cards;

public enum Quality {
    COMMON,
    RARE,
    EPIC,
    LEGENDARY
}
