package CrypticCreatures.models.cards.spell;

import CrypticCreatures.models.cards.*;

public class SpellCard extends Card {
    public SpellCard () {

    }

    @Override
    public void printCard(){

    }
}
